...
                <View
                    android:layout_marginBottom="5dp"
                    android:background="@color/menu_background_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/directLaunch"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    android:text="Launch"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

...
