...
                android:layout_width="wrap_content"
                android:text="Don't have any users?"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:onClick="createUser"
                android:text="Create Now"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
...
